# ICN-Search-Engine

./: CMakeLists.txt  README.md  client.cpp  server.cpp
CppCode/: .gitignore  Dockerfile  README.md  client.cpp  install.sh  server.cpp  startDocker.bat
CppCode/cmake/: boost.cmake  nfd.cmake
CppCode/include/ndn-cxx/detail/: config.hpp
JavaSimulation/: .gitignore  .gitlab-ci.yml  README.MD  build.gradle  gradle.properties  settings.gradle
JavaSimulation/src/main/java/edu/PIDR/SearchEngine/: Main.java
JavaSimulation/src/main/java/edu/PIDR/SearchEngine/Backend/: NetworkCreator.java
JavaSimulation/src/main/java/edu/PIDR/SearchEngine/Backend/components/: Network.java  Root.java  Router.java  SES.java  Server.java
JavaSimulation/src/main/java/edu/PIDR/SearchEngine/Backend/managers/: NetworkManager.java  TickManager.java
JavaSimulation/src/main/java/edu/PIDR/SearchEngine/Backend/transfer/: Connection.java  Data.java  Interest.java  Interface.java  Packet.java
JavaSimulation/src/main/java/edu/PIDR/SearchEngine/Backend/utils/: Bounds.java  Utilities.java
JavaSimulation/src/main/java/edu/PIDR/SearchEngine/Frontend/: MainApp.java  Model.java
JavaSimulation/src/main/java/edu/PIDR/SearchEngine/Frontend/Controllers/: ErrorController.java  MainController.java
JavaSimulation/src/main/java/edu/PIDR/SearchEngine/Frontend/Visualization/: Edge.java  Graph.java  Position.java  Vertex.java
JavaSimulation/src/main/java/edu/PIDR/SearchEngine/Frontend/Visualization/cells/: AbstractCell.java  CellClick.java  CellGestures.java  RectangleCell.java  RouterCell.java  SESCell.java  TriangleCell.java
JavaSimulation/src/main/java/edu/PIDR/SearchEngine/Frontend/Visualization/edges/: AbstractEdge.java  CorneredEdge.java  DoubleCorneredEdge.java  Edge.java
JavaSimulation/src/main/java/edu/PIDR/SearchEngine/Frontend/Visualization/graph/: Arrow.java  Graph.java  ICell.java  IEdge.java  IGraphNode.java  MainApp.java  Model.java  NodeGestures.java  PannableCanvas.java  SequenceDiagram.java  ViewportGestures.java
JavaSimulation/src/main/java/edu/PIDR/SearchEngine/Frontend/Visualization/layout/: AbegoTreeLayout.java  Layout.java  RandomLayout.java
JavaSimulation/src/main/resources/edu/PIDR/SearchEngine/Frontend/: error.fxml  main.fxml  styles.css
JavaSimulation/src/test/java/edu/PIDR/SearchEngine/: AppTest.java  BasicNetwork.java
cmake/: Findndn-cxx.cmake  boost.cmake  clean-all.cmake  ndn.cmake
include/ndn-cxx/: version.hpp
